--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/stone-payments/pos-mamba-web.git"
   },
-  "author": "",
+  "author": "Christian Kaisermann <christian.kaisermann@stone.com.br>",
   "license": "MIT",
   "peerDependencies": {
     "svelte": "^2.8.0"
