--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -2,7 +2,7 @@
   "name": "@mamba/styles",
   "version": "0.0.1",
   "description": "Mamba core and reset styles",
-  "author": "Stone Payments - Mamba Team",
+  "author": "Christian Kaisermann <christian.kaisermann@stone.com.br>",
   "license": "Apache-2.0",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "scripts": {
