--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@ result.xml
 npm-debug.log
 yarn-error.log
 
+## Components examples
+/packages/components/*/example/*
+!/packages/components/*/example/static/
+!/packages/components/*/example/Example.html
+
 ## Directories
 log/
 dist/
