--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
+    "run-node": "^1.0.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
@@ -163,22 +164,8 @@
     "webpack-sources": "^1.1.0",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "qrious": "^4.0.2"
   },
-  "dependencies": {
-    "compression": "^1.7.2",
-    "cssnano": "^4.0.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "golden-fleece": "^1.0.9",
-    "highlight.js": "^9.12.0",
-    "marked": "^0.4.0",
-    "polka": "^0.4.0",
-    "prismjs": "^1.14.0",
-    "qrious": "^4.0.2",
-    "sapper": "^0.13.2",
-    "serve-static": "^1.13.2",
-    "sirv": "^0.1.2",
-    "source-code-pro": "^2.30.1"
-  }
+  "dependencies": {}
 }
