--- a/package.json
+++ b/package.json
@@ -68,9 +68,10 @@
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-prismjs": "^1.0.2",
-    "cheerio": "^1.0.0-rc.2",
     "case": "^1.5.5",
+    "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.5",
+    "css-loader": "^1.0.0",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -80,6 +81,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
+    "file-loader": "^1.1.11",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
     "html-minifier": "^3.5.15",
@@ -92,6 +94,7 @@
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "postcss": "^7.0.0",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
@@ -99,6 +102,7 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
     "postcss-html": "^0.31.0",
+    "postcss-loader": "^2.1.6",
     "postcss-nested": "^3.0.0",
     "postcss-preset-env": "^5.1.0",
     "postcss-property-lookup": "^2.0.0",
@@ -124,10 +128,12 @@
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
     "shelljs": "^0.8.2",
+    "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
     "stylelint-config-standard": "^18.2.0",
     "svelte": "^2.8.0",
     "svelte-extras": "^2.0.2",
+    "svelte-loader": "^2.10.0",
     "svelte-preprocess": "^2.2.2",
     "svelte-routing": "^0.4.2",
     "url-loader": "^1.0.1",
@@ -145,13 +151,10 @@
     "highlight.js": "^9.12.0",
     "marked": "^0.4.0",
     "polka": "^0.4.0",
-    "postcss-preset-env": "^5.1.0",
     "prismjs": "^1.14.0",
     "sapper": "^0.13.2",
     "serve-static": "^1.13.2",
     "sirv": "^0.1.2",
-    "source-code-pro": "^2.30.1",
-    "stylelint": "^9.3.0",
-    "stylelint-config-standard": "^18.2.0"
+    "source-code-pro": "^2.30.1"
   }
 }
