--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -23,6 +23,9 @@
     "svelte-preprocess": "^2.2.2"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.47",
     "babel-eslint": "^8.2.3",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
