--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
+    "jsbarcode": "^3.9.0",
     "lint-staged": "^7.1.0",
     "markdown-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
