--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "packages/store",
       "packages/styles",
       "packages/configs",
+      "packages/webpack",
       "packages/components/*",
       "docs-sapper"
     ]
@@ -62,18 +63,20 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
+    "@laomao800/webpack-archive-plugin": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.0-beta",
     "babel-plugin-prismjs": "^1.0.2",
     "case": "^1.5.5",
     "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.5",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "eslint": "^5.0.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jest": "^21.17.0",
@@ -81,6 +84,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
     "file-loader": "^1.1.11",
+    "filemanager-webpack-plugin": "^1.0.27",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
     "html-minifier": "^3.5.15",
@@ -88,6 +92,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.3",
     "jsbarcode": "^3.9.0",
+    "json-loader": "^0.5.7",
     "lint-staged": "^7.1.0",
     "markdown-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -95,6 +100,7 @@
     "ncp": "^2.0.0",
     "node-sass": "^4.9.0",
     "npm-run-all": "^4.1.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss": "^7.0.0",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
@@ -109,7 +115,9 @@
     "postcss-reporter": "^5.0.0",
     "postcss-syntax": "^0.31.0",
     "prettier": "^1.12.1",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "quickenv": "^0.0.5",
+    "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rollup-plugin-babel": "^4.0.0-beta.2",
@@ -133,18 +141,25 @@
     "stylelint-config-standard": "^18.2.0",
     "svelte": "^2.8.0",
     "svelte-extras": "^2.0.2",
-    "svelte-loader": "^2.9.0",
+    "svelte-loader": "^2.9.1",
     "svelte-preprocess": "^2.2.3",
     "svelte-routing": "^0.4.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack": "^4.14.0",
+    "webpack-archive-plugin": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3",
+    "webpack-sources": "^1.1.0",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
     "yargs": "^11.0.0"
   },
   "dependencies": {
     "compression": "^1.7.2",
+    "cssnano": "^4.0.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "golden-fleece": "^1.0.9",
