--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@mamba/cli",
+  "name": "@mambasdk/cli",
   "version": "0.0.1",
   "description": "Mamba CLI",
-  "author": "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+  "author": "Stone Payments - Mamba Team",
   "bin": {
     "mamba": "src/cli.js"
   },
