--- a/packages/components/Dialog/package.json
+++ b/packages/components/Dialog/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mamba/dialog",
-  "version": "1.0.0",
+  "name": "@mambasdk/dialog",
+  "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": ["dist/", "src/"],
@@ -13,13 +13,13 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/sprite": "^1.0.0"
+    "@mambasdk/sprite": "^0.0.1"
   },
   "peerDependencies": {
-    "@mamba/native": "^0.0.1"
+    "@mambasdk/native": "^0.0.1"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.1",
-    "@mamba/icon": "^1.0.0"
+    "@mambasdk/styles": "^0.0.1",
+    "@mambasdk/icon": "^0.0.1"
   }
 }
