--- a/packages/components/Barcode/package.json
+++ b/packages/components/Barcode/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mamba/barcode",
-  "version": "1.0.0",
+  "name": "@mambasdk/barcode",
+  "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": [
@@ -15,7 +15,7 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.1",
+    "@mambasdk/styles": "^0.0.1",
     "jsbarcode": "^3.9.0"
   }
 }
