--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mamba/input",
-  "version": "1.0.0",
+  "name": "@mambasdk/input",
+  "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": ["dist/", "src/"],
@@ -12,10 +12,10 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mambasdk/styles": "^0.0.1"
   },
   "dependencies": {
-    "@mamba/icon": "^1.0.0",
-    "@mamba/native": "^0.0.1"
+    "@mambasdk/icon": "^0.0.1",
+    "@mambasdk/native": "^0.0.1"
   }
 }
