--- a/packages/components/Pos/package.json
+++ b/packages/components/Pos/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mamba/pos",
-  "version": "1.0.0",
+  "name": "@mambasdk/pos",
+  "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": [
@@ -15,9 +15,9 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mambasdk/styles": "^0.0.1"
   },
   "peerDependencies": {
-    "@mamba/native": "^0.0.1"
+    "@mambasdk/native": "^0.0.1"
   }
 }
