--- a/packages/components/Range/package.json
+++ b/packages/components/Range/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mamba/range",
-  "version": "1.0.0",
+  "name": "@mambasdk/range",
+  "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
   "files": ["dist/", "src/"],
@@ -12,6 +12,6 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mambasdk/styles": "^0.0.1"
   }
 }
