--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@mamba/configs",
-  "version": "1.0.0",
+  "name": "@mambasdk/configs",
+  "version": "0.0.1",
   "description": "Tool config presets for use in mamba projects.",
-  "author": "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+  "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "keywords": [
     "eslint",
