--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -8,6 +8,10 @@
     "src/"
   ],
   "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>",
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
