--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "mamba-web",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Web related Mamba libraries",
   "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Lancelloti <pedro.lancelloti@stone.com.br>",
+    "Jaime Costa Marques <cmarques@stone.com.br>",
+    "Jackson Garcia <jackson.garcia@stone.com.br>"
+  ],
   "license": "Apache-2.0",
   "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "scripts": {
