--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.1",
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+  ],
+  "license": "Apache-2.0",
   "bin": {
     "mamba": "src/cli.js"
   },
   "files": [
     "src/"
   ],
-  "license": "ISC",
   "dependencies": {
     "quickenv": "^0.0.5",
     "shelljs": "^0.8.2",
