--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -9,6 +9,10 @@
   ],
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>"
+  ],
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
     "build": "exit 0",
