--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.1",
   "source": "src/index.js",
   "svelte": "src/index.js",
-  "files": ["dist/", "src/"],
+  "files": [
+    "dist/",
+    "src/"
+  ],
   "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+  ],
   "license": "Apache-2.0",
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
