--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -2,6 +2,12 @@
   "name": "@mambasdk/native",
   "version": "0.0.1",
   "description": "Native Mamba applications methods",
+  "author": "Stone Payments - Mamba Team",
+  "contributors": [
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
+    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>"
+  ],
+  "license": "Apache-2.0",
   "source": "src/index.js",
   "subModules": [
     "src/*/index.js",
@@ -12,15 +18,5 @@
     "build": "cross-env NODE_ENV=production rollup -c ../../tools/rollup/config.lib.js",
     "test": "jest -c ../../jest.config.js --no-cache",
     "prepublishOnly": "npm run build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stone-payments/pos-mamba-web.git"
-  },
-  "author": "Stone Payments - Mamba Team",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stone-payments/pos-mamba-web/issues"
-  },
-  "homepage": "https://github.com/stone-payments/pos-mamba-web#readme"
+  }
 }
