Replace 'native' with 'api' and 'bridges'

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,8 @@
 node_modules/
 dist/
 /packages/components/*/example/*.js
-/packages/native/*.js
+/packages/api/*.js
+/packages/bridges/*.js
+/packages/signal/*.js
 /packages/utils/*.js
 /docs-sapper/**
