--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,7 @@
 node_modules/
 dist/
 /packages/components/*/example/*.js
-/packages/native/*.js
+/packages/api/*.js
+/packages/bridges/*.js
+/packages/signal/*.js
 /packages/utils/*.js
