Update packages with new @mambasdk/api

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,10 +1,8 @@
 {
   "name": "@mambasdk/app",
-  "version": "0.0.1",
-  "source": "src/index.js",
+  "version": "0.0.2",
   "svelte": "src/index.js",
   "files": [
-    "dist/",
     "src/"
   ],
   "author": "Stone Payments - Mamba Team",
@@ -25,6 +23,6 @@
   },
   "peerDependencies": {
     "svelte-routing": "^0.4.2",
-    "@mambasdk/native": "^0.0.1"
+    "@mambasdk/api": "^0.0.1"
   }
 }
