--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@mambasdk/input",
-  "version": "0.0.1",
-  "source": "src/index.js",
+  "version": "0.0.2",
   "svelte": "src/index.js",
-  "files": ["dist/", "src/"],
+  "files": [
+    "src/"
+  ],
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
@@ -19,6 +20,6 @@
   },
   "dependencies": {
     "@mambasdk/icon": "^0.0.1",
-    "@mambasdk/native": "^0.0.1"
+    "@mambasdk/api": "^0.0.1"
   }
 }
