--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -1,10 +1,8 @@
 {
   "name": "@mambasdk/printable",
-  "version": "0.0.3",
-  "source": "src/index.js",
+  "version": "0.0.4",
   "svelte": "src/index.js",
   "files": [
-    "dist/",
     "src/"
   ],
   "author": "Stone Payments - Mamba Team",
@@ -24,6 +22,6 @@
     "@mambasdk/dialog": "^0.0.1"
   },
   "peerDependencies": {
-    "@mambasdk/native": "^0.0.1"
+    "@mambasdk/api": "^0.0.1"
   }
 }
