Make vscode autoformat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,25 @@
   },
   "emmet.syntaxProfiles": {
     "postcss": "css"
-  }
+  },
+
+  "[svelte]": {
+    "editor.formatOnSave": true
+  },
+
+  "[html]": {
+    "editor.formatOnSave": true
+  },
+
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+
+  "[css]": {
+    "editor.formatOnSave": true
+  },
+
+  "[postcss]": {
+    "editor.formatOnSave": true
+  },
 }
