Fix build:libs command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start": "bolt w @mambasdk/docssapper start",
     "build": "bolt ws build",
     "build:styles": "bolt w @mambasdk/styles build",
-    "build:libs": "bolt ws build --only-fs \"packages/{store,native}/**\"",
+    "build:libs": "bolt ws build --only-fs \"packages/{store,api,bridges,signal}\"",
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "yarn lint:css; yarn lint:js",
