[WIP] Merge api/bridges/signal into same package

--- a/packages/components/Pos/package.json
+++ b/packages/components/Pos/package.json
@@ -20,6 +20,6 @@
     "@mambasdk/styles": "^0.0.1"
   },
   "peerDependencies": {
-    "@mambasdk/api": "^0.0.5"
+    "@mambasdk/os": "^0.0.1"
   }
 }
