--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "packages/utils",
       "packages/signal",
       "packages/api",
+      "packages/os",
       "packages/bridges",
       "packages/store",
       "packages/styles",
