--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -23,6 +23,6 @@
   },
   "peerDependencies": {
     "svelte-routing": "^0.4.2",
-    "@mambasdk/api": "^0.0.5"
+    "@mambasdk/os": "^0.0.1"
   }
 }
