--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -22,6 +22,6 @@
     "@mambasdk/dialog": "^0.0.2"
   },
   "peerDependencies": {
-    "@mambasdk/api": "^0.0.5"
+    "@mambasdk/os": "^0.0.1"
   }
 }
