--- a/packages/components/Icon/package.json
+++ b/packages/components/Icon/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "start": "rollup -c ../../../tools/rollup/config.component.watch.js -w",
     "build": "exit 0",
-    "build:dev": "exit 0",
-    "prepublishOnly": "npm run build"
+    "build:dev": "exit 0"
   },
   "dependencies": {
     "@mambasdk/styles": "^0.0.1"
