Squashed commit of the following: Drop docs-sapper folder in favor of moving to new repository Remove locks and reset yarn lock Remove unused dependencies
commit e11809ef2c3ba1822acb4dc191039076f056fdae
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 16:37:23 2018 -0300

    Replace node_env with app_env

commit 4e5ce6af6e92dc684cbec8993cff287fd03211a0
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 16:20:11 2018 -0300

    Update all package versions

commit 943d7a9a33377384e1a38dc89448261bd2f5da65
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:58:06 2018 -0300

    Update components @mambasdk/api version

commit 02bcc81d4045b2e0b708634d9378b477ac24e1ca
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:51:14 2018 -0300

    Update @mambasdk/api

commit d4f6396c37162299b55010f214dfc45d8042db0e
Merge: c6e350d b7c55e7
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:40:35 2018 -0300

    Merge pull request #32 from stone-payments/feature/docs-getting-started

    -WEBSDK-4-Docs-Getting-Started

commit c6e350d584411e6e4ecbfb240de49a040c111439
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:33:58 2018 -0300

    Update @mambasdk/cli

commit 802bb1c865bbaa49f3c29921e9fc243af55ed07d
Merge: ea7228c ba15f8f
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:32:48 2018 -0300

    Merge pull request #89 from stone-payments/WEBSDK-110-Payment-Bridge

    -WEBSDK-110-Payment-Bridge

commit ba15f8f61ff07f28209510ce36af7dcbded6f8cf
Merge: 0e7a7dc ea7228c
Author: Christian Kaisermann <christian@kaisermann.me>
Date:   Fri Aug 3 15:32:23 2018 -0300

    Merge branch 'develop' into WEBSDK-110-Payment-Bridge

commit b7c55e70907a08cc16de770e664fa88a1f31b945
Author: Jaime C Marques <jaime.mqu@gmail.com>
Date:   Fri Aug 3 15:31:33 2018 -0300

    Remove every junk

commit 0e7a7dc4b4d5ae39b79112450135843508

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "yarn lint:css; yarn lint:js",
-    "lint:js": "eslint \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
+    "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "lint:css": "stylelint --custom-syntax \"postcss-html\" \"packages/**/*.{html,svelte,css,pcss}\"",
     "format": "yarn format:css; yarn format:js",
-    "format:js": "prettier --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
+    "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix --custom-syntax \"postcss-html\" \"packages/**/*.{html,svelte,css,pcss}\"",
     "test": "bolt ws test"
   },
@@ -37,8 +37,7 @@
       "packages/styles",
       "packages/configs",
       "packages/webpack",
-      "packages/components/*",
-      "docs-sapper"
+      "packages/components/*"
     ]
   },
   "husky": {
