--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
     "link:packages": "bolt ws exec --only-fs \"packages/**\" -- yarn link",
     "lint": "yarn lint:css; yarn lint:js",
-    "lint:js": "eslint \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
+    "lint:js": "eslint \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "lint:css": "stylelint --custom-syntax \"postcss-html\" \"packages/**/*.{html,svelte,css,pcss}\"",
     "format": "yarn format:css; yarn format:js",
-    "format:js": "prettier --write \"*.js\" \"{tools,packages,website}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages,website}/**/*.{js,html,svelte}\"",
+    "format:js": "prettier --write \"*.js\" \"{tools,packages}/**/*.js\" && eslint --fix \"*.js\" \"{tools,packages}/**/*.{js,html,svelte}\"",
     "format:css": "prettier --write \"packages/**/*.{css,pcss}\" && stylelint --fix --custom-syntax \"postcss-html\" \"packages/**/*.{html,svelte,css,pcss}\"",
     "test": "bolt ws test"
   },
@@ -37,8 +37,7 @@
       "packages/styles",
       "packages/configs",
       "packages/webpack",
-      "packages/components/*",
-      "docs-sapper"
+      "packages/components/*"
     ]
   },
   "husky": {
@@ -78,7 +77,6 @@
     "babel-loader": "^8.0.0-beta",
     "babel-plugin-prismjs": "^1.0.2",
     "case": "^1.5.5",
-    "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.1.5",
     "css-loader": "^1.0.0",
     "eslint": "^5.0.1",
@@ -143,6 +141,7 @@
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-virtual": "^1.0.1",
+    "run-node": "^1.0.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.21.0",
     "stylelint": "^9.3.0",
@@ -163,22 +162,8 @@
     "webpack-sources": "^1.1.0",
     "xml-js": "^1.6.3",
     "yargonaut": "^1.1.2",
-    "yargs": "^11.0.0"
+    "yargs": "^11.0.0",
+    "qrious": "^4.0.2"
   },
-  "dependencies": {
-    "compression": "^1.7.2",
-    "cssnano": "^4.0.4",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "golden-fleece": "^1.0.9",
-    "highlight.js": "^9.12.0",
-    "marked": "^0.4.0",
-    "polka": "^0.4.0",
-    "prismjs": "^1.14.0",
-    "qrious": "^4.0.2",
-    "sapper": "^0.13.2",
-    "serve-static": "^1.13.2",
-    "sirv": "^0.1.2",
-    "source-code-pro": "^2.30.1"
-  }
+  "dependencies": {}
 }
