--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mambasdk/webpack",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Webpack configs for Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -16,27 +16,29 @@
     "@laomao800/webpack-archive-plugin": "^2.0.0",
     "babel-loader": "^8.0.0-beta",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.4",
-    "eslint-loader": "^2.0.0",
+    "cssnano": "^4.0.5",
+    "eslint-loader": "^2.1.0",
     "file-loader": "^1.1.11",
-    "filemanager-webpack-plugin": "^1.0.27",
-    "html-minifier": "^3.5.15",
+    "filemanager-webpack-plugin": "^1.0.29",
+    "html-minifier": "^3.5.19",
     "json-loader": "^0.5.7",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "mini-html-webpack-plugin": "^0.2.3",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
     "quickenv": "^0.0.5",
     "resolve-url-loader": "^2.3.0",
-    "style-loader": "^0.21.0",
-    "svelte-loader": "^2.9.1",
+    "style-loader": "^0.22.1",
+    "svelte-loader": "^2.10.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3",
-    "webpack-sources": "^1.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4",
+    "webpack-sources": "^1.1.0",
+    "webpack": "^4.16.5"
   }
 }
