--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mambasdk",
   "version": "2.0.0-alpha.1",
   "description": "SDK for developing in the Mamba web environment",
+  "repository": "https://github.com/stone-payments/pos-mamba-web.git",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Christian Kaisermann <christian.kaisermann@stone.com.br>",
@@ -10,7 +11,11 @@
     "Jackson Garcia <jackson.garcia@stone.com.br>"
   ],
   "license": "Apache-2.0",
-  "repository": "https://github.com/stone-payments/pos-mamba-web.git",
+  "engines": {
+    "node": ">= 8.10.0",
+    "npm": ">= 5.6.0",
+    "yarn": ">= 1.7.0"
+  },
   "scripts": {
     "build": "bolt ws build",
     "delete:modules": "rm -rf \"node_modules\" \"./**/node_modules\"",
@@ -61,103 +66,106 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/node": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/cli": "^7.0.0-rc.0",
+    "@babel/core": "^7.0.0-rc.0",
+    "@babel/node": "^7.0.0-rc.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.0",
+    "@babel/preset-env": "^7.0.0-rc.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
     "@laomao800/webpack-archive-plugin": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0-beta",
     "case": "^1.5.5",
-    "cross-env": "^5.1.5",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.4",
-    "eslint": "^5.0.1",
+    "cssnano": "^4.0.5",
+    "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jest": "^21.20.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.8.0",
     "file-loader": "^1.1.11",
-    "filemanager-webpack-plugin": "^1.0.27",
+    "filemanager-webpack-plugin": "^1.0.29",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
-    "html-minifier": "^3.5.15",
+    "html-minifier": "^3.5.19",
     "husky": "^0.15.0-rc.13",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.3",
+    "jest": "^23.4.2",
     "jsbarcode": "^3.9.0",
     "json-loader": "^0.5.7",
-    "lint-staged": "^7.1.0",
+    "lint-staged": "^7.2.0",
     "markdown-loader": "^3.0.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
-    "postcss": "^7.0.0",
+    "postcss": "^7.0.2",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
-    "postcss-cli": "^5.0.1",
+    "postcss-cli": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
-    "postcss-html": "^0.31.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-html": "^0.32.0",
+    "postcss-loader": "^3.0.0",
     "postcss-nested": "^3.0.0",
-    "postcss-preset-env": "^5.1.0",
+    "postcss-preset-env": "^5.3.0",
     "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^5.0.0",
-    "postcss-syntax": "^0.31.0",
-    "prettier": "^1.12.1",
+    "postcss-syntax": "^0.32.0",
+    "prettier": "^1.14.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "qrious": "^4.0.2",
     "quickenv": "^0.0.5",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.58.2",
+    "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.0.0-beta.2",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-commonjs": "^9.1.5",
     "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-filesize": "^1.5.0",
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-filesize": "^4.0.1",
     "rollup-plugin-fill-html": "^1.1.0",
     "rollup-plugin-livereload": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-rebase": "^1.1.0",
+    "rollup-plugin-rebase": "^2.0.2",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.4.2",
-    "rollup-plugin-svelte": "^4.1.0",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-svelte": "^4.2.1",
+    "rollup-plugin-uglify": "^4.0.0",
     "rollup-plugin-virtual": "^1.0.1",
     "shelljs": "^0.8.2",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.3.0",
+    "style-loader": "^0.22.1",
+    "stylelint": "^9.4.0",
     "stylelint-config-standard": "^18.2.0",
-    "svelte": "^2.8.0",
+    "svelte": "^2.9.11",
     "svelte-extras": "^2.0.2",
-    "svelte-loader": "^2.9.1",
+    "svelte-loader": "^2.10.1",
     "svelte-preprocess": "^2.2.3",
     "svelte-routing": "^0.4.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^4.14.0",
+    "webpack": "^4.16.5",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.1.0",
-    "xml-js": "^1.6.3",
-    "yargonaut": "^1.1.2",
-    "yargs": "^11.0.0"
+    "xml-js": "^1.6.7",
+    "yargonaut": "^1.1.3",
+    "yargs": "^12.0.1"
+  },
+  "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-rc.0"
   }
 }
