--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mambasdk/appbar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,9 +17,10 @@
     "build:dev": "exit 0"
   },
   "peerDependencies": {
-    "svelte-routing": "^0.4.2",
-    "@mambasdk/icon": "^0.0.1",
-    "@mambasdk/store": "^0.0.1",
-    "@mambasdk/styles": "^0.0.1"
+    "@mambasdk/styles": "^0.0.1",
+    "svelte-routing": "^0.4.2"
+  },
+  "dependencies": {
+    "@mambasdk/icon": "^0.0.1"
   }
 }
