--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@mambasdk/qrcode",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "svelte": "src/index.js",
   "files": [
     "src/"
   ],
   "author": "Stone Payments - Mamba Team",
   "contributors": [
-    "Pedro Lancelloti Kaisermann <pedro.lancelloti@stone.com.br>",
+    "Pedro Lancelloti <pedro.lancelloti@stone.com.br>",
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
   ],
   "license": "Apache-2.0",
