--- a/packages/components/Barcode/package.json
+++ b/packages/components/Barcode/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mambasdk/barcode",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -8,6 +8,7 @@
   "author": "Stone Payments - Mamba Team",
   "contributors": [
     "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+    "Pedro Lancelloti <pedro.lancelloti@stone.com.br>"
   ],
   "license": "Apache-2.0",
   "scripts": {
