--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.1.0",
     "xml-js": "^1.6.7",
+    "xmlbuilder": "^10.0.0",
     "yargonaut": "^1.1.3",
     "yargs": "^12.0.1"
   }
