--- a/packages/components/Barcode/package.json
+++ b/packages/components/Barcode/package.json
@@ -7,7 +7,7 @@
   ],
   "author": "Stone Payments - Mamba Team",
   "contributors": [
-    "Christian Kaisermann <christian.kaisermann@stone.com.br>"
+    "Christian Kaisermann <christian.kaisermann@stone.com.br>",
     "Pedro Lancelloti <pedro.lancelloti@stone.com.br>"
   ],
   "license": "Apache-2.0",
