--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mambasdk/webpack",
-  "version": "0.0.16",
+  "version": "0.0.18",
   "description": "Webpack configs for Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -39,6 +39,7 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
-    "webpack-sources": "^1.1.0"
+    "webpack-sources": "^1.1.0",
+    "xmlbuilder": "^10.0.0"
   }
 }
