--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mambasdk/appbar",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -21,6 +21,7 @@
     "svelte-routing": "^0.4.2"
   },
   "dependencies": {
-    "@mambasdk/icon": "^0.0.3"
+    "@mambasdk/icon": "^0.0.4",
+    "@mambasdk/store": "^0.0.3"
   }
 }
