--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mambasdk/styles",
+  "name": "@mamba/styles",
   "version": "0.0.1",
   "description": "Mamba core and reset styles",
   "author": "Stone Payments - Mamba Team",
