--- a/packages/components/Barcode/package.json
+++ b/packages/components/Barcode/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/barcode",
-  "version": "0.0.3",
+  "name": "@mamba/barcode",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,7 +17,7 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mambasdk/styles": "^0.0.1",
+    "@mamba/styles": "^0.0.1",
     "jsbarcode": "^3.9.0"
   }
 }
