--- a/packages/components/QRCode/package.json
+++ b/packages/components/QRCode/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/qrcode",
-  "version": "0.0.3",
+  "name": "@mamba/qrcode",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,7 +17,7 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mambasdk/styles": "^0.0.1",
+    "@mamba/styles": "^0.0.1",
     "qrious": "^4.0.2"
   }
 }
