--- a/packages/components/Switch/package.json
+++ b/packages/components/Switch/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/switch",
-  "version": "0.0.2",
+  "name": "@mamba/switch",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,6 +17,6 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mambasdk/styles": "^0.0.1"
+    "@mamba/styles": "^0.0.1"
   }
 }
