--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/configs",
-  "version": "0.0.12",
+  "name": "@mamba/configs",
+  "version": "0.0.1",
   "description": "Tool config presets for use in mamba projects.",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
