--- a/packages/components/Input/package.json
+++ b/packages/components/Input/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/input",
-  "version": "0.0.14",
+  "name": "@mamba/input",
+  "version": "0.0.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -16,12 +16,12 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mambasdk/styles": "^0.0.1"
+    "@mamba/styles": "^0.0.1"
   },
   "dependencies": {
-    "@mambasdk/icon": "^0.0.3"
+    "@mamba/icon": "^0.0.1"
   },
   "peerDependencies": {
-    "@mambasdk/pos": "^0.0.12"
+    "@mamba/pos": "^0.0.1"
   }
 }
