--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/pos",
-  "version": "0.0.12",
+  "name": "@mamba/pos",
+  "version": "0.0.1",
   "description": "Mamba web environment wrapper and simulator",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -14,6 +14,6 @@
     "prepublishOnly": "exit 0; npm run build"
   },
   "dependencies": {
-    "@mambasdk/switch": "^0.0.1"
+    "@mamba/switch": "^0.0.1"
   }
 }
