--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/store",
-  "version": "0.0.3",
+  "name": "@mamba/store",
+  "version": "0.0.1",
   "description": "Store for Svelte Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
