--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mambasdk/webpack",
-  "version": "0.0.21",
+  "name": "@mamba/webpack",
+  "version": "0.0.1",
   "description": "Webpack configs for Mamba Applications",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -8,7 +8,7 @@
   ],
   "license": "Apache-2.0",
   "peerDependencies": {
-    "@mambasdk/configs": "^0.0.12",
+    "@mamba/configs": "^0.0.1",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
   },
@@ -27,7 +27,7 @@
     "pkg-dir": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.11.0",
-    "quickenv": "^0.0.5",
+    "quickenv": "^0.0.6",
     "resolve-url-loader": "^2.3.0",
     "style-loader": "^0.22.1",
     "svelte-loader": "^2.10.1",
