Update all packages to 0.0.2-alpha.1

--- a/packages/components/AppBar/package.json
+++ b/packages/components/AppBar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/appbar",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -17,11 +17,11 @@
     "build:dev": "exit 0"
   },
   "peerDependencies": {
-    "@mamba/styles": "^0.0.1",
+    "@mamba/styles": "^0.0.2-alpha.1",
     "svelte-routing": "^0.4.2"
   },
   "dependencies": {
-    "@mamba/icon": "^0.0.1",
-    "@mamba/store": "^0.0.1"
+    "@mamba/icon": "^0.0.2-alpha.1",
+    "@mamba/store": "^0.0.2-alpha.1"
   }
 }
