--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/cli",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
