--- a/packages/components/Button/package.json
+++ b/packages/components/Button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/button",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "svelte": "src/index.js",
   "files": [
     "dist/",
@@ -18,9 +18,9 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/icon": "^0.0.1"
+    "@mamba/icon": "^0.0.2-alpha.1"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mamba/styles": "^0.0.2-alpha.1"
   }
 }
