--- a/packages/components/Printable/package.json
+++ b/packages/components/Printable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/printable",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -16,12 +16,12 @@
     "build:dev": "exit 0"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mamba/styles": "^0.0.2-alpha.1"
   },
   "dependencies": {
-    "@mamba/dialog": "^0.0.1"
+    "@mamba/dialog": "^0.0.2-alpha.1"
   },
   "peerDependencies": {
-    "@mamba/pos": "^0.0.1"
+    "@mamba/pos": "^0.0.2-alpha.1"
   }
 }
