--- a/packages/components/Progress/package.json
+++ b/packages/components/Progress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/progress",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "svelte": "src/index.js",
   "files": [
     "src/",
@@ -18,6 +18,6 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/styles": "^0.0.1"
+    "@mamba/styles": "^0.0.2-alpha.1"
   }
 }
