--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/cli",
-  "version": "0.0.2-alpha.2",
+  "version": "0.0.2-alpha.3",
   "description": "Mamba CLI",
   "author": "Stone Payments - Mamba Team",
   "contributors": [
@@ -16,6 +16,7 @@
   "dependencies": {
     "case": "^1.5.5",
     "chalk": "^2.4.1",
+    "cross-env": "^5.2.0",
     "inquirer": "^6.1.0",
     "quickenv": "^0.0.6",
     "shelljs": "^0.8.2",
