Disable svelte-vscode html formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
   /** Disable svelte-vscode linters */
   "svelte.plugin.css.enable": false,
   "svelte.plugin.typescript.enable": false,
+  "svelte.plugin.html.format.enable": false,
 
   /** Auto-fix on save */
   "eslint.autoFixOnSave": true,
