--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "postcss": "^7.0.2",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
+    "postcss-calc": "^6.0.1",
     "postcss-cli": "^6.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend-rule": "^2.0.0",
