Switch svelte-routing with @kaisermann/svelte-router

--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -22,7 +22,7 @@
     "@mamba/styles": "^0.0.2-alpha.6"
   },
   "peerDependencies": {
-    "svelte-routing": "^0.4.2",
-    "@mamba/pos": "^0.0.2-alpha.6"
+    "@mamba/pos": "^0.0.2-alpha.6",
+    "@kaisermann/svelte-router": "^0.0.3"
   }
 }
