--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       ]
     }
   },
-  "devDependencies": {
+  "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
@@ -76,6 +76,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
+    "@kaisermann/svelte-router": "^0.0.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
@@ -85,7 +86,6 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.0",
-    "eslint": "^5.4.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.1.0",
@@ -95,6 +95,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^4.0.0",
+    "eslint": "^5.4.0",
     "file-loader": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.2",
     "globby": "^8.0.1",
@@ -111,8 +112,8 @@
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "page": "^1.8.6",
     "pkg-dir": "^3.0.0",
-    "postcss": "^7.0.2",
     "postcss-advanced-variables": "^2.3.3",
     "postcss-atroot": "^0.1.3",
     "postcss-calc": "^6.0.1",
@@ -126,13 +127,13 @@
     "postcss-property-lookup": "^2.0.0",
     "postcss-reporter": "^6.0.0",
     "postcss-syntax": "^0.33.0",
+    "postcss": "^7.0.2",
     "prettier": "^1.14.2",
     "progress-bar-webpack-plugin": "^1.11.0",
     "qrious": "^4.0.2",
     "quickenv": "^0.0.6",
     "resolve-url-loader": "^2.3.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.65.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-commonjs": "^9.1.6",
@@ -148,24 +149,24 @@
     "rollup-plugin-svelte": "^4.2.1",
     "rollup-plugin-uglify": "^4.0.0",
     "rollup-plugin-virtual": "^1.0.1",
+    "rollup": "^0.65.0",
     "shelljs": "^0.8.2",
     "style-loader": "^0.23.0",
-    "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
-    "svelte": "^2.13.1",
+    "stylelint": "^9.5.0",
     "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.11.0",
     "svelte-preprocess": "^2.2.4",
-    "svelte-routing": "^0.4.2",
+    "svelte": "^2.13.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.17.1",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.6",
     "webpack-merge": "^4.1.4",
     "webpack-sources": "^1.1.0",
+    "webpack": "^4.17.1",
     "xmlbuilder": "^10.0.0",
     "yargonaut": "^1.1.3",
     "yargs": "^12.0.1"
