--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -16,7 +16,7 @@
     "build:dev": "exit 0"
   },
   "peerDependencies": {
-    "@kaisermann/svelte-router": "^0.0.3"
+    "svelte-routing": "^0.4.2"
   },
   "dependencies": {
     "@mamba/icon": "^0.0.2-alpha.6",
