--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/app",
-  "version": "0.0.2-alpha.6",
+  "version": "0.0.2-alpha.7",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -16,13 +16,13 @@
     "build:dev": "exit 0"
   },
   "dependencies": {
-    "@mamba/dialog": "^0.0.2-alpha.6"
+    "@mamba/dialog": "^0.0.2-alpha.7"
   },
   "devDependencies": {
-    "@mamba/styles": "^0.0.2-alpha.6"
+    "@mamba/styles": "^0.0.2-alpha.7"
   },
   "peerDependencies": {
-    "svelte-routing": "^0.4.2",
-    "@mamba/pos": "^0.0.2-alpha.6"
+    "@mamba/pos": "^0.0.2-alpha.7",
+    "@kaisermann/svelte-router": "^0.0.3"
   }
 }
