--- a/packages/components/Collection/package.json
+++ b/packages/components/Collection/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mamba/collection",
-  "version": "0.0.2-alpha.6",
+  "version": "0.0.2-alpha.7",
   "svelte": "src/index.js",
   "files": [
     "src/"
@@ -16,10 +16,10 @@
     "build:dev": "exit 0"
   },
   "peerDependencies": {
-    "svelte-routing": "^0.4.2"
+    "@kaisermann/svelte-router": "^0.0.3"
   },
   "dependencies": {
-    "@mamba/icon": "^0.0.2-alpha.6",
-    "@mamba/styles": "^0.0.2-alpha.6"
+    "@mamba/icon": "^0.0.2-alpha.7",
+    "@mamba/styles": "^0.0.2-alpha.7"
   }
 }
