--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@gen/rollup-plugin-generate-html": "^0.1.1",
-    "@kaisermann/svelte-router": "^0.0.3",
+    "svelte-page": "^0.0.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
@@ -97,7 +97,7 @@
     "eslint-plugin-promise": "^4.0.0",
     "eslint": "^5.4.0",
     "file-loader": "^2.0.0",
-    "filemanager-webpack-plugin": "^2.0.2",
+    "filemanager-webpack-plugin": "^2.0.4",
     "globby": "^8.0.1",
     "html-loader": "^0.5.5",
     "html-minifier": "^3.5.20",
@@ -111,7 +111,7 @@
     "mini-css-extract-plugin": "^0.4.2",
     "mini-html-webpack-plugin": "^0.2.3",
     "ncp": "^2.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "page": "^1.8.6",
     "pkg-dir": "^3.0.0",
     "postcss-advanced-variables": "^2.3.3",
@@ -147,7 +147,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-svelte": "^4.2.1",
-    "rollup-plugin-uglify": "^4.0.0",
+    "rollup-plugin-uglify": "^5.0.2",
     "rollup-plugin-virtual": "^1.0.1",
     "rollup": "^0.65.0",
     "shelljs": "^0.8.2",
@@ -157,18 +157,18 @@
     "svelte-extras": "^2.0.2",
     "svelte-loader": "^2.11.0",
     "svelte-preprocess": "^2.2.4",
-    "svelte": "^2.13.1",
+    "svelte": "^2.13.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
     "webpack-archive-plugin": "^3.0.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.6",
+    "webpack-dev-server": "^3.1.7",
     "webpack-merge": "^4.1.4",
-    "webpack-sources": "^1.1.0",
+    "webpack-sources": "^1.2.0",
     "webpack": "^4.17.1",
     "xmlbuilder": "^10.0.0",
-    "yargonaut": "^1.1.3",
+    "yargonaut": "^1.1.4",
     "yargs": "^12.0.1"
   }
 }
