--- a/packages/components/App/package.json
+++ b/packages/components/App/package.json
@@ -23,6 +23,6 @@
   },
   "peerDependencies": {
     "@mamba/pos": "^0.0.2-alpha.7",
-    "@kaisermann/svelte-router": "^0.0.3"
+    "svelte-page": "^0.0.5"
   }
 }
